--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -18,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_reminder"
         android:layout_margin="24dp"
         android:src="@drawable/baseline_add"
         app:maxImageSize="32dp"
