feat: add calendar logic add remainder form

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -32,6 +32,11 @@
         android:id="@+id/add_reminder"
         android:name="com.example.remindertask.views.addRemainder.FragmentAddReminder"
         tools:layout="@layout/fragment_main"
-        />
+        >
+        <action
+            android:id="@+id/add_reminder_to_main"
+            app:destination="@id/main"
+            />
+    </fragment>
 
 </navigation>
