--- a/app/src/main/res/layout/fragment_add_remainder_maps.xml
+++ b/app/src/main/res/layout/fragment_add_remainder_maps.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".AddRemainderMapsFragment">
+    tools:context=".views.addRemainder.AddRemainderMapsFragment">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/search_bar"
@@ -49,8 +49,9 @@
         android:id="@+id/no_permission_text"
         android:text="Please allow permission to access this feature"
         android:gravity="center"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/search_bar"
@@ -63,8 +64,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingHorizontal="12dp"
-        android:textSize="12dp"
+        android:textSize="12sp"
         android:text="Location permission Access"
+        android:visibility="gone"
         android:textColor="@color/white"
         android:background="@drawable/primary_btn"
         android:layout_marginTop="8dp"
