--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -51,6 +51,15 @@
         <action
             android:id="@+id/action_add_reminder_map_to_add_reminder"
             app:destination="@id/add_reminder" />
+        <action
+            android:id="@+id/add_map_to_map_search"
+            app:destination="@id/map_search"/>
+    </fragment>
+
+    <fragment
+        android:id="@+id/map_search"
+        android:name="com.example.remindertask.views.addReminder.MapSearchFragment"
+        tools:layout="@layout/fragment_map_search">
     </fragment>
 
 </navigation>
