--- a/app/src/main/res/layout/fragment_add_reminder_maps.xml
+++ b/app/src/main/res/layout/fragment_add_reminder_maps.xml
@@ -21,6 +21,7 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_marginTop="8dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/search_field"
