--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -3,17 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="16dp"
+    android:layout_margin="4dp"
+    android:padding="4dp"
     android:background="@drawable/task_item"
     android:elevation="10dp"
     >
 
     <ImageView
-        android:padding="16dp"
-        android:id="@+id/refresh"
+        android:padding="4dp"
+        android:id="@+id/icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/baseline_refresh"
+        android:src="@drawable/note"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -23,11 +24,21 @@
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="16dp"
+        android:padding="4dp"
         android:text="Recycler Item"
-        app:layout_constraintLeft_toRightOf="@id/refresh"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/icon"
+        app:layout_constraintBottom_toTopOf="@id/description"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:padding="8dp"
+        android:text="description"
+        android:id="@+id/description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/text"
+        app:layout_constraintLeft_toRightOf="@id/icon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
