--- a/app/src/main/res/layout/fragment_map_search.xml
+++ b/app/src/main/res/layout/fragment_map_search.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8dp"
-    tools:context=".views.addReminder.MapSearchFragment">
+    tools:context=".presentation.screens.mapSearch.MapSearchFragment">
 
     <LinearLayout
         android:id="@+id/search_field"
