--- a/app/src/main/res/layout/fragment_slide.xml
+++ b/app/src/main/res/layout/fragment_slide.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="16dp"
-    tools:context=".views.intro.FragmentSlide">
+    tools:context=".presentation.screens.intro.slide.SlideShow">
 
     <TextView
         android:id="@+id/text"
