--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/intro"
-        android:name="com.example.remindertask.views.intro.FragmentIntro"
+        android:name="com.example.remindertask.presentation.screens.intro.IntroFragment"
         tools:layout="@layout/fragment_intro">
         <action
             android:id="@+id/intro_to_main"
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/main"
-        android:name="com.example.remindertask.views.main.FragmentMain"
+        android:name="com.example.remindertask.presentation.screens.main.HomeFragment"
         tools:layout="@layout/fragment_main"
         >
         <action
@@ -30,7 +30,7 @@
 
     <fragment
         android:id="@+id/add_reminder"
-        android:name="com.example.remindertask.views.addReminder.FragmentAddReminder"
+        android:name="com.example.remindertask.presentation.screens.addReminder.AddRemainderFragment"
         tools:layout="@layout/fragment_main"
         >
         <action
@@ -45,7 +45,7 @@
 
     <fragment
         android:id="@+id/add_reminder_map"
-        android:name="com.example.remindertask.views.addReminder.AddReminderMapsFragment"
+        android:name="com.example.remindertask.presentation.screens.addReminder.AddReminderMapsFragment"
         tools:layout="@layout/fragment_add_reminder_maps"
         >
         <action
@@ -53,7 +53,7 @@
             app:destination="@id/add_reminder">
             <argument
                 android:name="map_select"
-                app:argType="com.example.remindertask.models.data.SelectedLocation" />
+                app:argType="com.example.remindertask.data.models.data.SelectedLocation" />
         </action>
         <action
             android:id="@+id/add_map_to_map_search"
@@ -62,7 +62,7 @@
 
     <fragment
         android:id="@+id/map_search"
-        android:name="com.example.remindertask.views.addReminder.MapSearchFragment"
+        android:name="com.example.remindertask.presentation.screens.mapSearch.MapSearchFragment"
         tools:layout="@layout/fragment_map_search">
         <action
             android:id="@+id/map_search_to_add_map"
