--- a/app/src/main/res/layout/fragment_add_reminder_maps.xml
+++ b/app/src/main/res/layout/fragment_add_reminder_maps.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".presentation.screens.addReminder.AddReminderMapsFragment">
+    tools:context=".presentation.screens.addRemainderMap.AddReminderMapsFragment">
 
     <EditText
         android:id="@+id/search_field"
