--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.screens.main.HomeFragment"
+    tools:context=".presentation.screens.home.HomeFragment"
     android:background="@color/secondary_color">
 
     <ProgressBar
