--- a/app/src/main/res/layout/reminder_dialog.xml
+++ b/app/src/main/res/layout/reminder_dialog.xml
@@ -73,21 +73,12 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:visibility="gone"/>
 
-    <com.google.android.material.switchmaterial.SwitchMaterial
-        android:id="@+id/switch_alert"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/date"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/map"
-        android:visibility="gone"/>
-
     <TextView
         android:id="@+id/location_addr"
         android:text="Addr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/switch_alert"
+        app:layout_constraintTop_toBottomOf="@id/alert"
         app:layout_constraintLeft_toLeftOf="parent"
         android:visibility="gone"/>
 
@@ -99,6 +90,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/location_addr"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:visibility="gone"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
